[package]
name = "janus-proxy"
version = "0.1.0"
authors = ["thanhdc <thanhdc@ql6625.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
tokio-tungstenite = "0.11.0"
futures = "0.3.5"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
serde_with = "1.5.0-alpha.2"
http = "0.2.1"
rand = "0.7.3"
